--- a/index.html
+++ b/index.html
@@ -62,13 +62,14 @@
     <section class="image-container"></section>
 
     <script>
-    document.getElementById('contactBtn').addEventListener('click', function(event) {
-        event.preventDefault();
-        document.getElementById('dropdownMenu').style.display = 'block';
+    document.getElementById('contactBtn').addEventListener('touchstart', function(event) {
+    event.stopPropagation();
+    var dropdown = document.getElementById('dropdownMenu');
+    dropdown.style.display = 'block';
     });
 
-        window.onclick = function(event) {
-    if (!event.target.matches('#contactBtn')) {
+    window.addEventListener('touchstart', function(event) {
+        if (!event.target.matches('#contactBtn')) {
             var dropdowns = document.getElementsByClassName("dropdown-content");
             for (var i = 0; i < dropdowns.length; i++) {
                 var openDropdown = dropdowns[i];
@@ -77,11 +78,12 @@
                 }
             }
         }
-    };
+    });
 
-    document.getElementById('dropdownMenu').addEventListener('click', function(event) {
-    event.stopPropagation();
-});
+    document.getElementById('dropdownMenu').addEventListener('touchstart', function(event) {
+        event.stopPropagation();
+    });
+
 
     document.querySelector('.nav-toggle').addEventListener('click', function() {
     this.classList.toggle('active');
