--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
 <body>
 
     <div class="background-video-container">
-        <video autoplay loop muted class="background-video">
-            <source src="assets/videos/hello_world.mp4" type="video/mp4">
-        </video>
+        <img src="assets/videos/hello_world.gif" class="background-video" alt="Background Animation">
     </div>
+    
     
 
     <header class="header">
